2013-09-15  alanz  <alanz@alanz-laptop>

	* src/Language/Haskell/Refact/Utils/TypeUtils.hs
	(adjustLayoutAfterRename): Adjust layout in a do expression after renaming

	* Re-align tokens when renaming the condition of a case statement
	to have a different length
	* When refactoring a CPP pre-processed file, read the preprocessor
	directives and non-compiled code as comments, so the source can be
	round-tripped. This allows refactoring of simple #if/#else/#endif
	code. NOTE: no refactoring is done on code that is not live after
	the preprocessor.
2013-09-12  v0.7.0.5
	* Now able to get tokens for a file pre-processed with CPP. But it
	is the pre-processed output, so the CPP directives are stripped
	out when writing out the refactored source.
	
2013-09-11  v0.7.0.4
	* Correct Haddock compile error. Close #4
	* hsWithBndrs only exists for GHC > 7.4.x
2013-09-10  v0.7.0.3
	
	* Fix elisp, would not commit refactoring due to missing methods
	
2013-09-08  v0.7.0.2

	* Fix issue #3: ifToCase formatting
	
2013-09-05  v0.7.0.1

	* Fix issue #2: elisp

2013-09-04 v0.7.0.0

	* Alpha release with new GHC API

